sensord (0.6.44) unstable; urgency=low

  * ALSAdaptor doesn't notify MCE about ALS usage state when going to standby or resuming from it. Fixes: NB#258493.
  * Return values for startSensor(), resume() and standby() now reflect was the state changed or not.

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Mon, 23 May 2011 15:17:45 +0200

sensord (0.6.43) unstable; urgency=low

  [Timo Rongas]
  * TestApp configuration file is now included by default.

  [Antti Virtanen]
  * Cleaned used include paths a bit that they better match what is in sensord-dev. Fixes: NB#244277.
  * Removed example headers form sensord-dev.
  * Testcase refactoring.

 -- Antti Virtanen <antti.i.virtanen@nokia.com>  Thu, 21 Apr 2011 13:19:16 +0300

sensord (0.6.42) unstable; urgency=low

  [Timo Rongas]
  * Added trigger to raise cpu freq. when a change in orientation is detected. Fixes: NB#244543

  [Antti Virtanen]
  * Sensor graph shrinking not supported anymore to prevent race conditions between adaptor threads and qt mainloop. Fixes: NB#242237
  * Implemented downsample filter for XYZ data.
  * RotationFilter won't propagate data for compass input. Fixes: NB#242233.
  * TapAdaptor won't try to configure pollrate for accelerometer driver anymore. Fixes: NB#242902.
  * Fixes to compass declination correction handling (Fixes: NB#241539):
    - CompassSensorChannelInterface::setUseDeclination() enables it only locally.
    - CompassData includes both raw and corrected reading.
    - DeclinationFilter periodically reads value from GConf in case it gets changed. Interval is configurable. 
    - CompassSensorChannel now only listens "truenorth" output from CompassChain.
    - CompassSensorChannelAdaptor does not have options anymore to enable/disable declination correction globally.
    - DeclinationFilter can be forced to read and update declination value from gconf with declinationValue().
  * Improved FilterApiTests and MetadataTests.